--- a/style.css
+++ b/style.css
@@ -128,3 +128,12 @@ main {
 .movie:hover .overview {
     transform: translateY(0);
 }
+
+footer {
+  color: #DBEDF3;
+  font-family: sans-serif;
+}
+a{
+  text-decoration: none;
+  color: #DBEDF3;
+}
