--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     font-family: 'Muli',sans-serif;
     margin: 0;
     background-color: var(--primary-color);
+    text-align: center;
 }
 
 header {
