--- a/style.css
+++ b/style.css
@@ -134,7 +134,12 @@ footer {
   color: #DBEDF3;
   font-family: sans-serif;
 }
-a{
+a{  
   text-decoration: none;
   color: #DBEDF3;
+  
 }
+a href{
+    color: #DBEDF3;
+}
+
